others/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - port: 8080
  selector:
    app: hello-world
