others/hello-ingress-two.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "raulvidaltrujillo.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
