others/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: default
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #acme.cert-manager.io/http01-edit-in-place: "true"
    #cert-manager.io/issue-temporary-certificate: "true"
    #kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx
  tls:
    - hosts:
      - raulvidaltrujillo.com
      secretName: demo-key
  rules:
    - host: "raulvidaltrujillo.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
